---
source: crates/jinja/minijinja/tests/test_parser.rs
description: "{% filter foo|bar(1, 2)|baz %}...{% endfilter %}"
input_file: crates/jinja/minijinja/tests/parser-inputs/filter_block.txt
snapshot_kind: text
---
Ok(
    Template {
        children: [
            FilterBlock {
                filter: Filter {
                    name: "baz",
                    expr: Some(
                        Filter {
                            name: "bar",
                            expr: Some(
                                Filter {
                                    name: "foo",
                                    expr: None,
                                    args: [],
                                } @ 1:11-1:14,
                            ),
                            args: [
                                Pos(
                                    Const {
                                        value: 1,
                                    } @ 1:19-1:20,
                                ),
                                Pos(
                                    Const {
                                        value: 2,
                                    } @ 1:22-1:23,
                                ),
                            ],
                        } @ 1:15-1:24,
                    ),
                    args: [],
                } @ 1:25-1:28,
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 1:31-1:34,
                ],
            } @ 1:1-1:49,
        ],
    } @ 0:0-1:49,
)
